--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
     "core-js": "^3.8.2",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.12",
     "nuxt-buefy": "^0.4.4",
     "pug": "^3.0.0",
