--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/typescript-runtime": "^2.0.1",
     "babylonjs": "^4.2.0",
     "core-js": "^3.8.2",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "nuxt": "^2.14.12",
     "nuxt-buefy": "^0.4.4",
@@ -25,6 +26,7 @@
     "@nuxt/typescript-build": "^2.0.4",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/lodash": "^4.14.168",
     "@types/three": "^0.103.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
