--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.14.168",
     "@types/three": "^0.103.2",
     "babel-eslint": "^10.1.0",
+    "clean-terminal-webpack-plugin": "^3.0.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
